fix some layout issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,7 @@ a {
   box-sizing: border-box;
 }
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-track {
